fixed games display on mobile

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body .gradient-overlay {
   }
 }
 #games .inner-container .game {
+  display: block;
   width: 100%;
   height: 100%;
   cursor: pointer;
